# CS450-SPRING2026-CryptoBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LOGIC_DOCUMENTATION.md  README.md  app.py  docker-compose.yml  plot.py  pyproject.toml
data/: model_search_results.csv
data/backtests/: ai_oos_equity_curve.csv  ai_oos_summary.csv  ai_oos_trade_history.csv  buy_hold_equity_curve.csv
data/results/: backtest_log.csv
models/: btc_model.json
outputs/: rolling_predictions.csv  rolling_summary.csv
src/backtest/: ai_engine.py  engine.py
src/bot/: alpaca_client.py  logic.py
src/dashboard/: account.py  auto_trade.py  backtest.py  chart.py  controls.py  forecast.py  history.py  pipeline.py
src/data/: downloader.py  ohlcv.py
src/features/: indicators.py
src/model/: model_search.py  predict.py  rolling_year_eval.py  train.py
tests/: test_components.py  test_integration.py
